<resources>
    <string name="app_name">Location Tracker</string>
    <string name="spinner_title">Location Type</string>
    <string name="locationName">Location Name</string>
    <string name="date">Date</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="getLocation">Get Location</string>
    <string name="locationType">Location Type</string>
    <string name="addLocation">Add Location</string>
    <string name="seeLocations">Show Locations</string>
    <string name="openInMaps">Open in Maps</string>
    <string name="deleteLocation">Delete Location</string>
    <string name="updateLocation">Update Location</string>
    <string name="espanol">Spanish</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="applyChanges">Apply Changes</string>
    <string name="ip" translatable="false">34.70.109.203</string>
    <string name="contrasena">Password</string>
    <string name="DNI">ID</string>
    <string name="SignIn">Log In</string>
    <string name="SignUp">Sign Up</string>
    <string name="telephone">Phone</string>
    <string name="lastname">Last Name</string>
    <string name="name">Name</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="editLocation">Edit Location</string>
    <string name="view_profile_data">View Profile Data</string>
    <string name="add_new_location">Add New Location</string>
    <string name="view_all_locations">View All Locations</string>
    <string name="sign_out">Sign Out</string>
    <string name="capture">Capture</string>
    <string name="enter_new_information">Enter new information</string>
    <string name="user_id" translatable="false">User ID</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="receive_push_notifications">Receive push notifications</string>
</resources>