<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="234dp"
        app:srcCompat="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/idEdtDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/DNI"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/idEdtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/contrasena" />

    <Button
        android:id="@+id/idBtnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/SignIn"
        android:textAllCaps="false" />

</LinearLayout>