<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#666666">

    <!-- Profile Picture Section -->
    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="#666666"
        android:onClick="changeProfilePicture"
        android:padding="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_circle_24" />

    <!-- User ID Section -->
    <TextView
        android:id="@+id/user_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/user_id"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/user_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="123456789"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:hint="dni"/>

    <!-- Password Section -->
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/password_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="*********"
        android:textColor="@color/black"
        android:hint="password"
        android:textSize="16sp"
        android:onClick="changePassword"/>

    <!-- Name Section -->
    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="John"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:hint="name"
        android:onClick="changeName"/>

    <!-- Last Name Section -->
    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/last_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Doe"
        android:textColor="@color/black"
        android:hint="lastname"
        android:textSize="16sp"
        android:onClick="changeLastName"/>

    <!-- Phone Section -->
    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/phone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="+345968302305"
        android:textColor="@color/black"
        android:hint="phone"
        android:textSize="16sp"
        android:onClick="changePhone"
        android:inputType="phone"/>

</RelativeLayout>
